<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.13.RELEASE</version>
		<relativePath />
	</parent>

	<groupId>com.acme.foo</groupId>
	<artifactId>springboot-app</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>REST API</name>
	<description></description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		
		<!-- For LDAP reference server (which does not work) -->
		<dependency>
			<groupId>com.unboundid</groupId>
			<artifactId>unboundid-ldapsdk</artifactId>
			<version>3.1.1</version>
		</dependency>
		
		<!-- CVE-2020-9547 -->
		<dependency>
			<groupId>br.com.anteros</groupId>
			<artifactId>Anteros-Core</artifactId>
			<exclusions>
    			<exclusion>
        			<groupId>org.slf4j</groupId>
       				<artifactId>slf4j-log4j12</artifactId>
    			</exclusion>
    			<exclusion>
           			<groupId>org.springframework.boot</groupId>
            		<artifactId>spring-boot-starter-logging</artifactId>
        		</exclusion>
        		<exclusion>
                	<groupId>org.apache.logging.log4j</groupId>
                	<artifactId>log4j-to-slf4j</artifactId>
            	</exclusion>
            <!-- Exclude log4j-api -->
            	<exclusion>
                	<groupId>org.apache.logging.log4j</groupId>
                	<artifactId>log4j-api</artifactId>
            	</exclusion>
            <!-- Exclude log4j-core -->
            	<exclusion>
                	<groupId>org.apache.logging.log4j</groupId>
                	<artifactId>log4j-core</artifactId>
            	</exclusion>
    <!-- Add other exclusions if needed -->
			</exclusions>
			<version>1.1.9</version>
		</dependency>
		<dependency>
			<groupId>br.com.anteros</groupId>
			<artifactId>Anteros-DBCP</artifactId>
			<exclusions>
    			<exclusion>
        			<groupId>org.slf4j</groupId>
       				<artifactId>slf4j-log4j12</artifactId>
    			</exclusion>
    			<exclusion>
           			<groupId>org.springframework.boot</groupId>
            		<artifactId>spring-boot-starter-logging</artifactId>
        		</exclusion>
        		<exclusion>
                	<groupId>org.apache.logging.log4j</groupId>
                	<artifactId>log4j-to-slf4j</artifactId>
            	</exclusion>
            <!-- Exclude log4j-api -->
            	<exclusion>
                	<groupId>org.apache.logging.log4j</groupId>
                	<artifactId>log4j-api</artifactId>
            	</exclusion>
            <!-- Exclude log4j-core -->
            	<exclusion>
                	<groupId>org.apache.logging.log4j</groupId>
                	<artifactId>log4j-core</artifactId>
            	</exclusion>
    <!-- Add other exclusions if needed -->
			</exclusions>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.codahale.metrics</groupId>
			<artifactId>metrics-healthchecks</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter</artifactId>
    		<exclusions>
        		<exclusion>
           			<groupId>org.springframework.boot</groupId>
            		<artifactId>spring-boot-starter-logging</artifactId>
        		</exclusion>
    		</exclusions>
		</dependency>
		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

		<!-- Test deps -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>